Add tinyURL link to screenrc

--- a/Sample Home Environment Files/.screenrc
+++ b/Sample Home Environment Files/.screenrc
@@ -1,4 +1,5 @@
 # Latest version available for download at:  http://github.com/write2david/screendoor/raw/master/Sample%20Home%20Environment%20Files/.screenrc
+# Or: wget www.tinyurl.com/get-screendoor-screenrc
 # Git: http://github.com/write2david/screendoor
 #
 #
